# bad-code-examples

unit-tests/member-boolean/: A.cpp  A.h  ATest.cpp  B.cpp  B.h  CMakeLists.txt
